<resources>
    <string name="app_name">kotlin-login</string>
    //Main
    <string name="main_title">Trabajo Práctico 1</string>
    <string name="activity_Register">Register</string>
    <string name="activity_LogIn">LogIn</string>
    <string name="activity_UserName">Username</string>
    <string name="activity_Password">Password</string>

    //Welcome
    <string name="welcome_title">Bienvenido a la aplicación Juan Torres</string>
    <string name="welcome_Android">Android</string>
    <string name="welcome_IOS">IOS</string>
    <string name="welcome_Programacion">Programacion</string>
    <string name="welcome_Redes">Redes</string>
    <string name="welcome_Seguridad">Seguridad</string>
    <string name="welcome_Hardware">Hardware</string>
    <string name="welcome_Otra">Otra</string>
    //Register
    <string name="register_username_hint">Username</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password_confirm_hint">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="hint_enter_preference">Ingrese su preferencia</string>


</resources>