<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:background="@color/aqua"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aqua"
        >

        <LinearLayout
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="32dp"
            android:textSize="18sp"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/EditText_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="username"
                android:hint="@string/register_username_hint"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:autofillHints="emailAddress"
                android:id="@+id/EditText_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:autofillHints=""
                android:id="@+id/EditText_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:autofillHints=""
                android:id="@+id/EditText_RepeatPassword_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/register_password_confirm_hint"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/aqua"
                />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
